# jailtime-rl-selfplay

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config.yaml  config_adaptive_rl.yaml  config_mps.yaml  config_rl_selfplay.yaml  demo_prompts.yaml
src/jailtime/: __init__.py  cli.py  config.py  datasets.py  episode.py  orchestrator.py  rewards.py  safety_policy.py  schemas.py  telemetry.py
src/jailtime/agents/: __init__.py  attacker.py  defender.py  verifier.py
src/jailtime/attacks/: __init__.py  adaptive.py  base.py  model_guided.py  mutations.py  registry.py  techniques.py  toy.py
src/jailtime/evals/: __init__.py  metrics.py  reports.py
src/jailtime/providers/: __init__.py  base.py  device.py  local_http.py  local_transformers.py  mock.py  openai_compatible.py
src/jailtime/rl/: __init__.py  agents.py  policy.py  reinforce.py  selfplay.py  torch_policy.py  verifier_calibration.py
src/jailtime/trainers/: __init__.py  adversarial_dataset.py  bandit.py  (+3 more)
tests/: test_adaptive_attacker.py  test_adaptive_orchestrator.py  test_cli.py  test_device.py  test_mock_provider.py  test_model_guided_attacker.py  test_orchestrator.py  test_rewards.py  test_rl_reinforce.py  test_rl_reward_shaping.py  test_rl_selfplay.py  test_rl_torch_math.py  test_rl_trainer.py  test_rl_verifier_calibration.py  test_verifier.py
work/: _launch_terminal_run.sh  gemma4_jailtime_full_run.py  gemma4_jailtime_full_run.yaml  rl_selfplay_4b_run.yaml  rl_selfplay_cuda.yaml  rl_selfplay_run.py  start_gemma4_jailtime_full_run.sh  start_rl_selfplay_cuda.sh  start_rl_selfplay_run.sh
(+5 files in other folders)
